Fix issue with animation on smaller screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
   font-family: var(--ff-primary);
   font-size: var(--fs-body);
   line-height: 1.6;
+  height: 100%;
 }
 img {
   display: block;
@@ -189,7 +190,7 @@ h3 {
   min-height: 100%;
   min-width: 1024px;
   width: 100%;
-  height: auto;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
@@ -707,13 +708,13 @@ textarea {
     margin: 1.4em 0;
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .about__flex {
-    width: 350px;
+    width: 300px;
   }
-}
-@media (max-width: 600px) {
-  .about__flex {
-    width: 250px;
+  .about__img {
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
   }
 }
